2009-12-23  Andoni Morales Alastruey  <amorales@flumotion.com>


	* flumotion/component/consumers/httpfragstreamer/resources.py:
	Comment out error callback

2009-12-23  Andoni Morales Alastruey  <amorales@flumotion.com>


	* flumotion/component/consumers/httpfragstreamer/httpfragstreamer.py:
	* flumotion/component/consumers/httpfragstreamer/httpfragstreamer.xml:
	Rename properties from hls-propname to propname

2009-12-23  Andoni Morales Alastruey  <amorales@flumotion.com>


	* flumotion/component/consumers/httpfragstreamer/httpfragstreamer.py:
	Subclass Request to log the request lenght and transfered data
	* flumotion/component/consumers/httpfragstreamer/resources.py:
	Log request duration and transfered bytes. Fix pep8

2009-12-23  Andoni Morales Alastruey  <amorales@flumotion.com>


	* flumotion/component/consumers/httpfragstreamer/resources.py:
	Added sessions support
	* configure.ac:
	* flumotion/Makefile.am:
	* flumotion/common (added):
	* flumotion/common/__init__.py (added):
	* flumotion/common/Makefile.am (added):
	* flumotion/common/uuid.py (added):
	Add python uuid module missing in 2.4.
	Temporal solution waiting for #7386

2009-12-18  Marc-André Lureau  <mlureau@flumotion.com>

	* flumotion/test/Makefile.am:
	* flumotion/test/test_ts_segmenter.py (added):
	* flumotion/test/test_ts_segmenter.xml (added):
	Test the ts-segmenter.

2009-12-18  Marc-André Lureau  <mlureau@flumotion.com>

	* flumotion/test/test_mpegts.xml (added):
	* flumotion/test/test_mpegts.py:
	Check keyframe counter, and keyframe interval.

2009-12-18  Marc-André Lureau  <mlureau@flumotion.com>

	* flumotion/test/Makefile.am:
	* flumotion/test/test_mpegts.py (added):
	Added simple mpegts-mux component test.
	* flumotion/test/test_component.py (deleted):
	* flumotion/test/test_hls_ring.py:
	Renamed file to match test name.

2009-12-18  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/test/test_component.py (added):
	Added test suite for the HLSRing
