@@ -1,22 +1,20 @@
 <registry>
   <components>
-   
+
     <component type="mpegts-muxer" base="flumotion/component/muxers/mpegts"
                _description="Muxes encoded feeds into an MPEG Transport Stream feed.">
       <source location="flumotion.component.muxers.mpegts.mpegts"/>
-      
+
       <feeder name="default"/>
-      
+
       <eater name="default" multiple="yes"/>
-      
+
       <entries>
         <entry type="component" location="mpegts.py"
                function="MPEGTS"/>
       </entries>
 
       <properties>
-          <property name="rewrite-offset" type="bool"
-              _description="Increment buffer offset value on each key frame (defualt: True)"/>
       </properties>
 
       <wizard _description="MPEGTS" type="muxer"
