@@ -1,6 +1,13 @@
 2009-12-23  Andoni Morales Alastruey  <amorales@flumotion.com>
 
 
+	* flumotion/component/muxers/mpegts/mpegts.py:
+	* flumotion/component/muxers/mpegts/mpegts.xml:
+	Remove the rewritte-offset property
+
+2009-12-23  Andoni Morales Alastruey  <amorales@flumotion.com>
+
+
 	* flumotion/component/consumers/httpfragstreamer/resources.py:
 	Comment out error callback
 
